// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`runner scripts generates non-pooled runner script 1`] = `
"#!/usr/bin/env bash
set -euo pipefail
export WK_ROOT='/tmp/repo'
export WK_CREATED='/tmp/repo__feature'
echo 'project: app'
bash '/tmp/app.hook.sh'
"
`;

exports[`runner scripts generates pooled runner script with marker tail 1`] = `
"#!/usr/bin/env bash
set -euo pipefail
export WK_ROOT='/tmp/repo'
export WK_CREATED='/tmp/repo__feat1'
echo 'project: app'
bash '/tmp/app.hook.sh'
: > "$(git -C "$WK_CREATED" rev-parse --git-path wk-pool-initialized)"
"
`;
